rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_international_map_world_polyconic.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["International Map of the World Polyconic",
    METHOD["International Map of the World Polyconic"],
    PARAMETER["Longitude of natural origin",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8802]],
    PARAMETER["Latitude of 1st point",2,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    PARAMETER["Latitude of 2nd point",4,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    PARAMETER["False easting",5,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8806]],
    PARAMETER["False northing",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8807]]]
