rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_krovak.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Krovak",
    METHOD["Krovak",
        ID["EPSG",9819]],
    PARAMETER["Latitude of projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8811]],
    PARAMETER["Longitude of origin",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8833]],
    PARAMETER["Co-latitude of cone axis",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",1036]],
    PARAMETER["Latitude of pseudo standard parallel",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8818]],
    PARAMETER["Scale factor on pseudo standard parallel",1,
        SCALEUNIT["unity",1],
        ID["EPSG",8819]],
    PARAMETER["False easting",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8806]],
    PARAMETER["False northing",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8807]]]
