rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_laborde_oblique_mercator.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Laborde Oblique Mercator",
    METHOD["Laborde Oblique Mercator",
        ID["EPSG",9813]],
    PARAMETER["Latitude of projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8811]],
    PARAMETER["Longitude of projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8812]],
    PARAMETER["Azimuth at projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8813]],
    PARAMETER["Scale factor at projection centre",1,
        SCALEUNIT["unity",1],
        ID["EPSG",8815]],
    PARAMETER["False easting",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8806]],
    PARAMETER["False northing",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8807]]]
